--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~19.0.0",
     "@angular/ssr": "~19.0.0",
     "@po-ui/ng-components": "~19.0.0",
+    "@typescript-eslint/type-utils": "^8.34.0",
     "angular-shepherd": "^19.0.2",
     "dta-voice": "^0.0.16",
     "express": "^4.18.2",
